--- a/app/src/main/res/menu/mouth_popup.xml
+++ b/app/src/main/res/menu/mouth_popup.xml
@@ -14,6 +14,6 @@
         android:title="이가 흔들리며 입냄새가 난다" />
     <item
         android:id="@+id/mouth_menu4"
-        android:title="입 주위/입술이 헐었으며 입냄새가 난다" />
+        android:title="입술이 헐었으며 입냄새가 난다" />
 
 </menu>
