Add select Icon show
날짜 클릭시 icon 이미지 띄우기

--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -5,12 +5,79 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
+    <FrameLayout
+        android:layout_weight="1"
+        android:padding="1dp"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/frameLayout2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+      >
+
+        <ImageView
+            android:layout_margin="10dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/dog_img" />
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="90dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:lineSpacingExtra="1sp"
+            android:text="NAME"
+            android:textColor="#bebebe"
+            android:textSize="11sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="130dp"
+            android:id="@+id/name_editText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:lineSpacingExtra="6sp"
+            android:textColor="#f08e76"
+            android:textSize="15sp"
+            android:textStyle="normal"
+            android:text="John"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="90dp"
+            android:layout_marginTop="40dp"
+            android:fontFamily="sans-serif-medium"
+            android:lineSpacingExtra="1sp"
+            android:text="SEX"
+            android:textColor="#bebebe"
+            android:textSize="11sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_marginLeft="130dp"
+            android:layout_marginTop="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:text="Male"
+            android:lineSpacingExtra="6sp"
+            android:textColor="#f08e76"
+            android:textSize="15sp"
+            android:textStyle="normal" />
+    </FrameLayout>
     <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+    android:layout_weight="9"
+    android:layout_marginBottom="25dp"
     android:id="@+id/calendarView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_weight="1"
     app:mcv_selectionColor="@color/calendar"
+    app:mcv_tileHeight="match_parent"
+    app:mcv_dateTextAppearance="@color/black"
     app:mcv_showOtherDates="all"/>
 
 
