--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#FFFFFFFF</color>
     <color name="calendar">#F08E76 </color>
+    <color name="black">#3B3B3B</color>
 </resources>
