Add  layout switch
EditAcitity.java,TipActivity.java 추가

날짜 클릭 -> CalendarInActivity.java  -> TipActivity.java->HomeFragment.java 이동
ProfileFragment.java의 편집이미지 클릭 -> activity_edit_profile.xml  -> HomeFragment.java 이동

--- a/app/src/main/res/layout/activity_calendar_in.xml
+++ b/app/src/main/res/layout/activity_calendar_in.xml
@@ -335,14 +335,14 @@
             android:textColor="#5c5c5c"
             android:textSize="10sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/profile_button"
+            app:layout_constraintBottom_toTopOf="@+id/calendarSave_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
 
         <Button
-            android:id="@+id/profile_button"
+            android:id="@+id/calendarSave_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="50dp"
