--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -270,7 +270,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/profile_button"
+        android:id="@+id/editSave_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
