--- a/app/src/main/res/layout/activity_tip_detail.xml
+++ b/app/src/main/res/layout/activity_tip_detail.xml
@@ -11,19 +11,10 @@
     android:focusableInTouchMode="true"
     >
 
-    <ImageView
-        android:id="@+id/backbtn_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="10dp"
-        android:padding="10dp"
-        android:src="@drawable/icn_back_dark"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/white" />
+
 
     <TextView
+        android:layout_marginTop="14dp"
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,7 +36,7 @@
         android:layout_height="480dp"
         android:layout_marginBottom="40dp"
         app:cardCornerRadius="13dp"
-        app:layout_constraintBottom_toTopOf="@+id/profile_button"
+        app:layout_constraintBottom_toTopOf="@+id/tipCheck_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
@@ -142,7 +133,7 @@
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:id="@+id/profile_button"
+        android:id="@+id/tipCheck_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
