--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -15,6 +15,7 @@
       >
 
         <ImageView
+            android:id="@+id/image_plusBtn"
             android:layout_margin="10dp"
             android:layout_width="50dp"
             android:layout_height="50dp"
