--- a/app/src/main/res/layout/activity_tip_detail.xml
+++ b/app/src/main/res/layout/activity_tip_detail.xml
@@ -12,12 +12,11 @@
     >
 
 
-
     <TextView
-        android:layout_marginTop="14dp"
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:fontFamily="sans-serif-medium"
         android:gravity="center_horizontal"
         android:letterSpacing="-0.02"
@@ -29,8 +28,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/backbtn_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/backbtn_image" />
-
+        app:layout_constraintTop_toTopOf="parent" />
     <androidx.cardview.widget.CardView
         android:layout_width="353dp"
         android:layout_height="480dp"
@@ -39,99 +37,41 @@
         app:layout_constraintBottom_toTopOf="@+id/tipCheck_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           android:layout_marginTop="10dp"
-           android:orientation="vertical">
-
-           <TextView
-               android:layout_weight="1"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:fontFamily="sans-serif-medium"
-               android:gravity="center_horizontal"
-               android:lineSpacingExtra="6sp"
-               android:textColor="#f08e76"
-               android:textSize="18sp"
-               android:textStyle="bold"
-               android:layout_marginTop="47dp"
-               tools:text="조금 나쁨"
-            />
-
-           <ImageView
-               android:layout_weight="1"
-               android:layout_width="73dp"
-               android:layout_height="71dp"
-               android:layout_marginLeft="140dp"
-               android:src="@drawable/normal_ic"
-             />
-           <TextView
-               android:layout_weight="1"
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:fontFamily="sans-serif-medium"
-               android:textStyle="normal"
-               android:textSize="25sp"
-               android:textColor="#707070"
-               android:lineSpacingExtra="5sp"
-               android:gravity="center_horizontal"
-               android:text="건강을 확인해보세요."
-               />
-
-           <TextView
-               android:layout_weight="2"
-               android:layout_width="305dp"
-               android:layout_height="wrap_content"
-               android:fontFamily="sans-serif"
-               android:textStyle="normal"
-               android:textSize="17sp"
-               android:textColor="#707070"
-               android:layout_gravity="center_horizontal"
-               android:textAlignment="center"
-               android:text="
-변색이 노랑색으로 최근 평소에 먹지 않던 음식을 섭취한적 있나요?"
-               />
-
-           <TextView
-               android:layout_weight="6"
-               android:layout_width="305dp"
-               android:layout_height="wrap_content"
-               android:fontFamily="sans-serif"
-               android:textStyle="normal"
-               android:textSize="17sp"
-               android:textColor="#707070"
-               android:layout_gravity="center_horizontal"
-               android:textAlignment="center"
-               android:text="
-사료를 바꾸거나 달라진 음식이 무엇인지 체크해보세요!"
-               />
-       </LinearLayout>
         <LinearLayout
-            android:layout_marginTop="461dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:orientation="horizontal">
-            <ImageView
-                android:layout_width="6dp"
-                android:layout_height="6dp"
-                android:src="@drawable/tip_ic"/>
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="6dp"
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="11dp"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center_horizontal"
+                android:lineSpacingExtra="6sp"
+                android:text="조금 나쁨"
+                android:textColor="#f08e76"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+        <ImageView
+            android:layout_width="73dp"
+            android:layout_height="71dp"
+            android:layout_marginLeft="140dp"
+            android:src="@drawable/normal_ic"
+            android:layout_marginBottom="10dp"
+            />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/tip_RecyclerView"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="16dp"
-                android:background="#f9f2f2"
-                android:src="@drawable/tip_ic" />
-            <ImageView
-                android:layout_width="6dp"
-                android:layout_height="6dp"
-                android:layout_marginLeft="16dp"
-                android:src="@drawable/tip_ic"/>
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+                app:layout_constraintBottom_toTopOf="@+id/tipCheck_btn" />
 
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
     <Button
         android:id="@+id/tipCheck_btn"
         android:layout_width="wrap_content"
