Add select Poop Color
colorPicker, db추가
tip화면 레이아웃 비율 수정

--- a/app/src/main/res/layout/activity_tip_detail.xml
+++ b/app/src/main/res/layout/activity_tip_detail.xml
@@ -68,10 +68,12 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/tip_RecyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 app:layout_constraintBottom_toTopOf="@+id/tipCheck_btn" />
 
+
         </LinearLayout>
+
 
     </androidx.cardview.widget.CardView>
 
