--- a/app/src/main/res/layout/activity_calendar_in.xml
+++ b/app/src/main/res/layout/activity_calendar_in.xml
@@ -9,6 +9,7 @@
     android:background="@color/white"
     android:focusable="true"
     android:focusableInTouchMode="true"
+
     >
 
     <ScrollView
@@ -58,16 +59,17 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/poo_img"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_marginEnd="14dp"
-            android:src="@drawable/circle"
-            app:layout_constraintEnd_toStartOf="@+id/imageView3"
-            app:layout_constraintTop_toTopOf="@+id/imageView3" />
+            app:cardBackgroundColor="#997000"
+            app:layout_constraintEnd_toStartOf="@+id/poo_down"
+            app:layout_constraintTop_toTopOf="@+id/poo_down" />
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/poo_down"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
@@ -261,13 +263,13 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="70dp"
+            android:layout_marginBottom="40dp"
             android:background="@drawable/memo_icon"
             android:fontFamily="sans-serif-medium"
-            android:gravity="top"
+            android:gravity="center_horizontal"
             android:lineSpacingExtra="1sp"
             android:textColor="#5c5c5c"
-            android:textSize="10sp"
+            android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/calendarSave_btn"
             app:layout_constraintEnd_toEndOf="parent"
