--- a/app/src/main/res/layout/tip_layout.xml
+++ b/app/src/main/res/layout/tip_layout.xml
@@ -18,6 +18,7 @@
             android:id="@+id/disease_Name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.1"
             android:layout_margin="10dp"
             android:fontFamily="sans-serif-medium"
             android:gravity="center_horizontal"
@@ -30,6 +31,7 @@
         <TextView
             android:layout_marginTop="10dp"
             android:id="@+id/result1_Tv"
+            android:layout_weight="0.1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-medium"
