Add memo data , show before data
해당 날짜에 이미지 존재시
 -> 선택했던 tip정보와 메모장 표시(BeforeTipActivity / activity_before_tip_detail)
해당 날짜에 아무것도 없다면
-> 새로운 tip 선택,memo 추가(TipActivity / activity_tip_detail)

show before data 관련 sql문 추가

계산시, 0일때 나는 에러처리

레이아웃 전체 재수정

--- a/app/src/main/res/menu/skin_popup.xml
+++ b/app/src/main/res/menu/skin_popup.xml
@@ -23,7 +23,7 @@
         android:title="전신에 걸쳐서 털이 빠진다" />
     <item
         android:id="@+id/skin_menu7"
-        android:title="귀,등 부분을 긁거나 비듬이 생긴다" />
+        android:title="귀,등을 긁거나 비듬이 생긴다" />
     <item
         android:id="@+id/skin_menu8"
         android:title="앞다리를 자주 핥는다" />
