--- a/app/src/main/res/drawable/calendar_select_background.xml
+++ b/app/src/main/res/drawable/calendar_select_background.xml
@@ -5,7 +5,7 @@
         android:width="20dp"
         android:height="20dp"
         android:bottom="2dp"
-        android:drawable="@drawable/good_ic"
+        android:drawable="@drawable/logo"
         android:gravity="bottom|center">
         >
 
