--- a/app/src/main/res/layout/activity_before_tip_detail.xml
+++ b/app/src/main/res/layout/activity_before_tip_detail.xml
@@ -6,14 +6,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f08e76"
     android:focusable="true"
     android:focusableInTouchMode="true"
     >
 
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/todayTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -21,8 +20,8 @@
         android:gravity="center_horizontal"
         android:letterSpacing="-0.02"
         android:lineSpacingExtra="7sp"
-        android:text="Tips"
-        android:textColor="#ffffff"
+        android:text="Day Tips"
+        android:textColor="#f08e76"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/backbtn_image"
@@ -31,49 +30,50 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
         android:layout_width="353dp"
-        android:layout_height="480dp"
+        android:layout_height="380dp"
         android:layout_marginTop="20dp"
         app:cardCornerRadius="13dp"
+        app:cardElevation="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6">
+        app:layout_constraintTop_toBottomOf="@+id/todayTv">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
-
             <TextView
                 android:layout_weight="1"
-                android:id="@+id/doctorText"
+                android:id="@+id/bf_doctorText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="11dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="5dp"
                 android:fontFamily="sans-serif-medium"
                 android:gravity="center_horizontal"
                 android:lineSpacingExtra="6sp"
-                android:text="\n\n\nPetCare가 처음이신가요?"
+                android:text="PetCare"
                 android:textColor="#f08e76"
                 android:textSize="18sp"
                 android:textStyle="bold" />
-
             <ImageView
-                android:layout_weight="1"
-                android:id="@+id/doctorIcon"
-                android:layout_width="73dp"
+                android:id="@+id/bf_doctorIcon"
+                android:layout_width="69dp"
                 android:layout_height="71dp"
                 android:layout_marginLeft="140dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
+                android:layout_weight="1"
                 android:src="@drawable/logo" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_weight="8"
                 android:id="@+id/tip_RecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_constraintBottom_toTopOf="@+id/tipCheck_btn" />
+                android:layout_weight="7"
+            />
 
 
         </LinearLayout>
@@ -81,16 +81,57 @@
 
     </androidx.cardview.widget.CardView>
 
-    <Button
-        android:id="@+id/tipCheck_btn"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_weight="1"
+        android:fontFamily="sans-serif-medium"
+        android:lineSpacingExtra="1sp"
+        android:padding="5dp"
+        android:text="Memo"
+        android:textColor="#f08e76"
+        android:textSize="10sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/cardView3"
+        app:layout_constraintStart_toStartOf="@+id/cardView3" />
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView3"
+        android:layout_width="353dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="24dp"
+        app:cardCornerRadius="13dp"
+        app:cardElevation="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cardView2">
+
+        <TextView
+            android:id="@+id/bf_memo"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center_horizontal"
+            android:layout_gravity="fill_horizontal"
+            android:lineSpacingExtra="1sp"
+            android:textColor="#707070"
+            android:textSize="14sp"
+      >
+
+        </TextView>
+    </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/todayCheck_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/start_button"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="#f08e76"
         android:fontFamily="sans-serif-medium"
         android:text="I got it!"
-        android:textColor="#f08e76"
+        android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
