--- a/app/src/main/res/layout/activity_calendar_in.xml
+++ b/app/src/main/res/layout/activity_calendar_in.xml
@@ -261,6 +261,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView13" />
 
         <EditText
+            android:id="@+id/memoTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="40dp"
