--- a/app/src/main/res/menu/mouth_popup.xml
+++ b/app/src/main/res/menu/mouth_popup.xml
@@ -8,7 +8,7 @@
         android:title="누런 치석이 있으며 입냄새가 난다" />
     <item
         android:id="@+id/mouth_menu2"
-        android:title="상처나 부스럼이 있으며 입냄새가 난다" />
+        android:title="상처,부스럼이 있으며 입냄새가 난다" />
     <item
         android:id="@+id/mouth_menu3"
         android:title="이가 흔들리며 입냄새가 난다" />
